# brans-nfe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/brans_nfe/: __init__.py  _patches.py  certificado.py  chain.py  client.py  danfse_pdf.py  dps.py  enums.py  eventos.py  exceptions.py  models.py  signer.py
tests/: conftest.py  test_certificado.py  test_chain.py  test_client.py  test_danfse_pdf.py  test_dps.py  test_eventos.py  test_models.py  test_signer.py
